<resources>
    <string name="app_name">계시록 암송</string>
    <string name="hello">안녕</string>
    <string name="lobby">로비</string>
    <string name="title">title</string>
    <string name="chapter">장</string>
    <string name="verse">절</string>
    <string name="order">순서</string>
    <string name="random">랜덤</string>
    <string name="start">시작하기</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="errChapter">장을 선택하여주세요.</string>
    <string name="verse_all">절(전체)</string>
    <string name="chapter1">1장</string>
    <string name="appExit">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="answer">정답 보기</string>
    <string name="answer_check">정답 확인</string>
    <string name="exit">나가기</string>
    <string name="quiz_exit_message">나가시겠습니까?</string>
    <string name="corret">정답입니다</string>
    <string name="wrong">틀렸습니다</string>
    <string name="answer2">정답</string>
    <string name="drawup">작성</string>
    <string name="quiz_clear">문제를 다 풀었습니다</string>
    <string name="wrongQuestion">틀린문제</string>
    <string name="wrongCount">틀린횟수</string>
    <string name="confirm">확인</string>
    <string name="next">넘어가기</string>
    <string name="content_clear">지우기</string>
    <string name="revel">계</string>
    <string name="revelation">요한계시록</string>
    <string name="lobby_revelation">REVELATION</string>
    <string name="revelation_1_1">예수 그리스도의 계시라 이는 하나님이 그에게 주사 반드시 속히 될 일을 그 종들에게 보이시려고 그 천사를 그 종 요한에게 보내어 지시하신 것이라</string>
    <string name="revelation_1_2">요한은 하나님의 말씀과 예수 그리스도의 증거 곧 자기의 본 것을 다 증거하였느니라</string>
    <string name="revelation_1_3">이 예언의 말씀을 읽는 자와 듣는 자들과 그 가운데 기록한 것을 지키는 자들이 복이 있나니 때가 가까움이라</string>
    <string name="revelation_1_4">요한은 아시아에 있는 일곱 교회에 편지하노니 이제도 계시고 전에도 계시고 장차 오실 이와 그 보좌 앞에 일곱 영과</string>
    <string name="revelation_1_5">또 충성된 증인으로 죽은 자들 가운데서 먼저 나시고 땅의 임금들의 머리가 되신 예수 그리스도로 말미암아 은혜와 평강이 너희에게 있기를 원하노라 우리를 사랑하사 그의 피로 우리 죄에서 우리를 해방하시고</string>
    <string name="revelation_1_6">그 아버지 하나님을 위하여 우리를 나라와 제사장으로 삼으신 그에게 영광과 능력이 세세토록 있기를 원하노라 아멘</string>
    <string name="revelation_1_7">볼찌어다 구름을 타고 오시리라 각인의 눈이 그를 보겠고 그를 찌른 자들도 볼터이요 땅에 있는 모든 족속이 그를 인하여 애곡하리니 그러하리라 아멘</string>
    <string name="revelation_1_8">주 하나님이 가라사대 나는 알파와 오메가라 이제도 있고 전에도 있었고 장차 올 자요 전능한 자라 하시더라</string>
    <string name="revelation_1_9">나 요한은 너희 형제요 예수의 환난과 나라와 참음에 동참하는 자라 하나님의 말씀과 예수의 증거를 인하여 밧모라 하는 섬에 있었더니</string>
    <string name="revelation_1_10">주의 날에 내가 성령에 감동하여 내 뒤에서 나는 나팔 소리 같은 큰 음성을 들으니</string>
    <string name="revelation_1_11">가로되 너 보는 것을 책에 써서 에베소, 서머나, 버가모, 두아디라, 사데, 빌라델비아, 라오디게아 일곱 교회에 보내라 하시기로</string>
    <string name="revelation_1_12">몸을 돌이켜 나더러 말한 음성을 알아 보려고 하여 돌이킬 때에 일곱 금 촛대를 보았는데</string>
    <string name="revelation_1_13">촛대 사이에 인자 같은 이가 발에 끌리는 옷을 입고 가슴에 금띠를 띠고</string>
    <string name="revelation_1_14">그 머리와 털의 희기가 흰 양털 같고 눈 같으며 그의 눈은 불꽃 같고</string>
    <string name="revelation_1_15">그의 발은 풀무에 단련한 빛난 주석 같고 그의 음성은 많은 물 소리와 같으며</string>
    <string name="revelation_1_16">그 오른손에 일곱 별이 있고 그 입에서 좌우에 날선 검이 나오고 그 얼굴은 해가 힘있게 비취는것 같더라</string>
    <string name="revelation_1_17">내가 볼때에 그 발앞에 엎드러져 죽은 자 같이 되매 그가 오른손을 내게 얹고 가라사대 두려워 말라 나는 처음이요 나중이니</string>
    <string name="revelation_1_18">곧 산 자라 내가 전에 죽었었노라 볼찌어다 이제 세세토록 살아 있어 사망과 음부의 열쇠를 가졌노니</string>
    <string name="revelation_1_19">그러므로 네 본 것과 이제 있는 일과 장차 될 일을 기록하라</string>
    <string name="revelation_1_20">네 본 것은 내 오른손에 일곱 별의 비밀과 일곱 금 촛대라 일곱 별은 일곱 교회의 사자요 일곱 촛대는 일곱 교회니라</string>
    <string name="revelation_2_1">에베소 교회의 사자에게 편지하기를 오른손에 일곱 별을 붙잡고 일곱 금 촛대 사이에 다니시는 이가 가라사대</string>
    <string name="revelation_2_2">내가 네 행위와 수고와 네 인내를 알고 또 악한 자들을 용납지 아니한 것과 자칭 사도라 하되 아닌 자들을 시험하여 그 거짓된 것을 네가 드러낸 것과</string>
    <string name="revelation_2_3">또 네가 참고 내 이름을 위하여 견디고 게으르지 아니한 것을 아노라</string>
    <string name="revelation_2_4">그러나 너를 책망할 것이 있나니 너의 처음 사랑을 버렸느니라</string>
    <string name="revelation_2_5">그러므로 어디서 떨어진 것을 생각하고 회개하여 처음 행위를 가지라 만일 그리하지 아니하고 회개치 아니하면 내가 네게 임하여 네 촛대를 그 자리에서 옮기리라</string>
    <string name="revelation_2_6">오직 네게 이것이 있으니 네가 니골라당의 행위를 미워하는도다 나도 이것을 미워하노라</string>
    <string name="revelation_2_7">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다 이기는 그에게는 내가 하나님의 낙원에 있는 생명나무의 과실을 주어 먹게 하리라</string>
    <string name="revelation_2_8">서머나 교회의 사자에게 편지하기를 처음이요 나중이요 죽었다가 살아나신 이가 가라사대</string>
    <string name="revelation_2_9">내가 네 환난과 궁핍을 아노니 실상은 네가 부요한 자니라 자칭 유대인이라 하는 자들의 훼방도 아노니 실상은 유대인이 아니요 사단의 회라</string>
    <string name="revelation_2_10">네가 장차 받을 고난을 두려워 말라 볼찌어다 마귀가 장차 너희 가운데서 몇 사람을 옥에 던져 시험을 받게 하리니 너희가 십일 동안 환난을 받으리라 네가 죽도록 충성하라 그리하면 내가 생명의 면류관을 네게 주리라</string>
    <string name="revelation_2_11">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다 이기는 자는 둘째 사망의 해를 받지 아니하리라</string>
    <string name="revelation_2_12">버가모 교회의 사자에게 편지하기를 좌우에 날선 검을 가진 이가 가라사대</string>
    <string name="revelation_2_13">네가 어디 사는 것을 내가 아노니 거기는 사단의 위가 있는 데라 네가 내 이름을 굳게 잡아서 내 충성된 증인 안디바가 너희 가운데 곧 사단의 거하는 곳에서 죽임을 당할 때에도 나를 믿는 믿음을 저버리지 아니하였도다</string>
    <string name="revelation_2_14">그러나 네게 두어가지 책망할 것이 있나니 거기 네게 발람의 교훈을 지키는 자들이 있도다 발람이 발락을 가르쳐 이스라엘 앞에 올무를 놓아 우상의 제물을 먹게 하였고 또 행음하게 하였느니라</string>
    <string name="revelation_2_15">이와 같이 네게도 니골라당의 교훈을 지키는 자들이 있도다</string>
    <string name="revelation_2_16">그러므로 회개하라 그리하지 아니하면 내가 네게 속히 임하여 내 입의 검으로 그들과 싸우리라</string>
    <string name="revelation_2_17">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다 이기는 그에게는 내가 감추었던 만나를 주고 또 흰 돌을 줄터인데 그 돌 위에 새 이름을 기록한 것이 있나니 받는 자 밖에는 그 이름을 알 사람이 없느니라</string>
    <string name="revelation_2_18">두아디라 교회의 사자에게 편지하기를 그 눈이 불꽃 같고 그 발이 빛난 주석과 같은 하나님의 아들이 가라사대</string>
    <string name="revelation_2_19">내가 네 사업과 사랑과 믿음과 섬김과 인내를 아노니 네 나중 행위가 처음것보다 많도다</string>
    <string name="revelation_2_20">그러나 네게 책망할 일이 있노라 자칭 선지자라 하는 여자 이세벨을 네가 용납함이니 그가 내 종들을 가르쳐 꾀어 행음하게 하고 우상의 제물을 먹게 하는도다</string>
    <string name="revelation_2_21">또 내가 그에게 회개할 기회를 주었으되 그 음행을 회개하고자 아니하는도다</string>
    <string name="revelation_2_22">볼찌어다 내가 그를 침상에 던질터이요 또 그로 더불어 간음하는 자들도 만일 그의 행위를 회개치 아니하면 큰 환난 가운데 던지고</string>
    <string name="revelation_2_23">또 내가 사망으로 그의 자녀를 죽이리니 모든 교회가 나는 사람의 뜻과 마음을 살피는 자인줄 알찌라 내가 너희 각 사람의 행위대로 갚아 주리라</string>
    <string name="revelation_2_24">두아디라에 남아 있어 이 교훈을 받지 아니하고 소위 사단의 깊은 것을 알지 못하는 너희에게 말하노니 다른 짐으로 너희에게 지울 것이 없노라</string>
    <string name="revelation_2_25">다만 너희에게 있는 것을 내가 올 때까지 굳게 잡으라</string>
    <string name="revelation_2_26">이기는 자와 끝까지 내 일을 지키는 그에게 만국을 다스리는 권세를 주리니</string>
    <string name="revelation_2_27">그가 철장을 가지고 저희를 다스려 질그릇 깨뜨리는 것과 같이 하리라 나도 내 아버지께 받은 것이 그러하니라</string>
    <string name="revelation_2_28">내가 또 그에게 새벽 별을 주리라</string>
    <string name="revelation_2_29">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다</string>
    <string name="revelation_3_1">사데 교회의 사자에게 편지하기를 하나님의 일곱 영과 일곱 별을 가진이가 가라사대 내가 네 행위를 아노니 네가 살았다 하는 이름은 가졌으나 죽은 자로다</string>
    <string name="revelation_3_2">너는 일깨워 그 남은바 죽게 된 것을 굳게 하라 내 하나님 앞에 네 행위의 온전한 것을 찾지 못하였노니</string>
    <string name="revelation_3_3">그러므로 네가 어떻게 받았으며 어떻게 들었는지 생각하고 지키어 회개하라 만일 일깨지 아니하면 내가 도적 같이 이르리니 어느 시에 네게 임할는지 네가 알지 못하리라</string>
    <string name="revelation_3_4">그러나 사데에 그 옷을 더럽히지 아니한 자 몇명이 네게 있어 흰 옷을 입고 나와 함께 다니리니 그들은 합당한 자인 연고라</string>
    <string name="revelation_3_5">이기는 자는 이와 같이 흰 옷을 입을 것이요 내가 그 이름을 생명책에서 반드시 흐리지 아니하고 그 이름을 내 아버지 앞과 그 천사들 앞에서 시인하리라</string>
    <string name="revelation_3_6">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다</string>
    <string name="revelation_3_7">빌라델비아 교회의 사자에게 편지하기를 거룩하고 진실하사 다윗의 열쇠를 가지신 이 곧 열면 닫을 사람이 없고 닫으면 열 사람이 없는 그이가 가라사대</string>
    <string name="revelation_3_8">볼찌어다 내가 네 앞에 열린 문을 두었으되 능히 닫을 사람이 없으리라 내가 네 행위를 아노니 네가 적은 능력을 가지고도 내 말을 지키며 내 이름을 배반치 아니하였도다</string>
    <string name="revelation_3_9">보라 사단의 회 곧 자칭 유대인이라 하나 그렇지 않고 거짓말 하는 자들 중에서 몇을 네게 주어 저희로 와서 네 발앞에 절하게 하고 내가 너를 사랑하는 줄을 알게 하리라</string>
    <string name="revelation_3_10">네가 나의 인내의 말씀을 지켰은즉 내가 또한 너를 지키어 시험의 때를 면하게 하리니 이는 장차 온 세상에 임하여 땅에 거하는 자들을 시험할 때라</string>
    <string name="revelation_3_11">내가 속히 임하리니 네가 가진 것을 굳게 잡아 아무나 네 면류관을 빼앗지 못하게 하라</string>
    <string name="revelation_3_12">이기는 자는 내 하나님 성전에 기둥이 되게 하리니 그가 결코 다시 나가지 아니하리라 내가 하나님의 이름과 하나님의 성 곧 하늘에서 내 하나님께로부터 내려 오는 새 예루살렘의 이름과 나의 새 이름을 그이 위에 기록하리라</string>
    <string name="revelation_3_13">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다</string>
    <string name="revelation_3_14">라오디게아 교회의 사자에게 편지하기를 아멘이시요 충성되고 참된 증인이시요 하나님의 창조의 근본이신 이가 가라사대</string>
    <string name="revelation_3_15">내가 네 행위를 아노니 네가 차지도 아니하고 더웁지도 아니하도다 네가 차든지 더웁든지 하기를 원하노라</string>
    <string name="revelation_3_16">네가 이같이 미지근하여 더웁지도 아니하고 차지도 아니하니 내 입에서 너를 토하여 내치리라</string>
    <string name="revelation_3_17">네가 말하기를 나는 부자라 부요하여 부족한 것이 없다 하나 네 곤고한 것과 가련한 것과 가난한 것과 눈 먼것과 벌거벗은 것을 알지 못하도다</string>
    <string name="revelation_3_18">내가 너를 권하노니 내게서 불로 연단한 금을 사서 부요하게 하고 흰 옷을 사서 입어 벌거벗은 수치를 보이지 않게 하고 안약을 사서 눈에 발라 보게 하라</string>
    <string name="revelation_3_19">무릇 내가 사랑하는 자를 책망하여 징계하노니 그러므로 네가 열심을 내라 회개하라</string>
    <string name="revelation_3_20">볼찌어다 내가 문밖에 서서 두드리노니 누구든지 내 음성을 듣고 문을 열면 내가 그에게로 들어가 그로 더불어 먹고 그는 나로 더불어 먹으리라</string>
    <string name="revelation_3_21">이기는 그에게는 내가 내 보좌에 함께 앉게 하여주기를 내가 이기고 아버지 보좌에 함께 앉은 것과 같이 하리라</string>
    <string name="revelation_3_22">귀 있는 자는 성령이 교회들에게 하시는 말씀을 들을찌어다</string>
    <string name="revelation_4_1">이 일 후에 내가 보니 하늘에 열린 문이 있는데 내가 들은바 처음에 내게 말하던 나팔소리 같은 그 음성이 가로되 이리로 올라오라 이 후에 마땅히 될 일을 내가 네게 보이리라 하시더라</string>
    <string name="revelation_4_2">내가 곧 성령에 감동하였더니 보라 하늘에 보좌를 베풀었고 그 보좌 위에 앉으신 이가 있는데</string>
    <string name="revelation_4_3">앉으신 이의 모양이 벽옥과 홍보석 같고 또 무지개가 있어 보좌에 둘렸는데 그 모양이 녹보석 같더라</string>
    <string name="revelation_4_4">또 보좌에 둘려 이십 사 보좌들이 있고 그 보좌들 위에 이십 사 장로들이 흰 옷을 입고 머리에 금 면류관을 쓰고 앉았더라</string>
    <string name="revelation_4_5">보좌로부터 번개와 음성과 뇌성이 나고 보좌 앞에 일곱 등불 켠것이 있으니 이는 하나님의 일곱 영이라</string>
    <string name="revelation_4_6">보좌 앞에 수정과 같은 유리 바다가 있고 보좌 가운데와 보좌 주위에 네 생물이 있는데 앞뒤에 눈이 가득하더라</string>
    <string name="revelation_4_7">그 첫째 생물은 사자 같고 그 둘째 생물은 송아지 같고 그 세째 생물은 얼굴이 사람 같고 그 네째 생물은 날아가는 독수리 같은데</string>
    <string name="revelation_4_8">네 생물이 각각 여섯 날개가 있고 그 안과 주위에 눈이 가득하더라 그들이 밤낮 쉬지 않고 이르기를 거룩하다 거룩하다 거룩하다 주 하나님 곧 전능하신 이여 전에도 계셨고 이제도 계시고 장차 오실 자라 하고</string>
    <string name="revelation_4_9">그 생물들이 영광과 존귀와 감사를 보좌에 앉으사 세세토록 사시는 이에게 돌릴 때에</string>
    <string name="revelation_4_10">이십사 장로들이 보좌에 앉으신 이 앞에 엎드려 세세토록 사시는 이에게 경배하고 자기의 면류관을 보좌 앞에 던지며 가로되</string>
    <string name="revelation_4_11">우리 주 하나님이여 영광과 존귀와 능력을 받으시는 것이 합당하오니 주께서 만물을 지으신지라 만물이 주의 뜻대로 있었고 또 지으심을 받았나이다 하더라</string>
    <string name="revelation_5_1">내가 보매 보좌에 앉으신 이의 오른손에 책이 있으니 안팎으로 썼고 일곱 인으로 봉하였더라</string>
    <string name="revelation_5_2">또 보매 힘 있는 천사가 큰 음성으로 외치기를 누가 책을 펴며 그 인을 떼기에 합당하냐 하니</string>
    <string name="revelation_5_3">하늘 위에나 땅 위에나 땅 아래에 능히 책을 펴거나 보거나 할 이가 없더라</string>
    <string name="revelation_5_4">이 책을 펴거나 보거나 하기에 합당한 자가 보이지 않기로 내가 크게 울었더니</string>
    <string name="revelation_5_5">장로 중에 하나가 내게 말하되 울지 말라 유대 지파의 사자 다윗의 뿌리가 이기었으니 이 책과 그 일곱 인을 떼시리라 하더라</string>
    <string name="revelation_5_6">내가 또 보니 보좌와 네 생물과 장로들 사이에 어린 양이 섰는데 일찍 죽임을 당한것 같더라 일곱 뿔과 일곱 눈이 있으니 이 눈은 온 땅에 보내심을 입은 하나님의 일곱 영이더라</string>
    <string name="revelation_5_7">어린 양이 나아와서 보좌에 앉으신 이의 오른손에서 책을 취하시니라</string>
    <string name="revelation_5_8">책을 취하시매 네 생물과 이십 사 장로들이 어린 양 앞에 엎드려 각각 거문고와 향이 가득한 금 대접을 가졌으니 이 향은 성도의 기도들이라</string>
    <string name="revelation_5_9">새 노래를 노래하여 가로되 책을 가지시고 그 인봉을 떼기에 합당하시도다 일찍 죽임을 당하사 각 족속과 방언과 백성과 나라 가운데서 사람들을 피로 사서 하나님께 드리시고</string>
    <string name="revelation_5_10">저희로 우리 하나님 앞에서 나라와 제사장을 삼으셨으니 저희가 땅에서 왕노릇하리로다 하더라</string>
    <string name="revelation_5_11">내가 또 보고 들으매 보좌와 생물들과 장로들을 둘러 선 많은 천사의 음성이 있으니 그 수가 만만이요 천천이라</string>
    <string name="revelation_5_12">큰 음성으로 가로되 죽임을 당하신 어린 양이 능력과 부와 지혜와 힘과 존귀와 영광과 찬송을 받으시기에 합당하도다 하더라</string>
    <string name="verse_1">1절</string>
    <string name="alert_con">※완벽하게 구절을 적고 오른쪽 화살표를 눌러보세요.</string>
    <string name="wrongNote">오답노트</string>
    <string name="alert_wrong">※다음 문제를 눌렀을 때 틀리면 횟수가 올라갑니다</string>
    <string name="cv">성구</string>
    <string name="alert_start">시작할 장과 절을 선택하고 시작해보세요</string>
</resources>